--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,10 @@ services:
   app-build:
     image: index.docker.io/appsmith/appsmith-ee
     container_name: app-build
-    ports:
-      - "1281:80"
-      - "1282:443"
+    expose:
+      - "1991"
+      - "1992"
+      - "1993"
     volumes:
       - ./stacks:/appsmith-stacks
     restart: unless-stopped
@@ -14,7 +15,8 @@ services:
       - traefik.http.routers.app-build.rule=Host(`build.kocur.app`)
       - traefik.http.routers.app-build.tls=true
       - traefik.http.routers.app-build.tls.certresolver=letsencrypt
-      - traefik.http.services.app-build.loadbalancer.server.port=1281
+      - traefik.http.routers.app-build.entrypoints=websecure
+      - traefik.http.services.app-build.loadbalancer.server.port=1991
     networks:
       - proxy
 
