--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,22 +6,22 @@ services:
     volumes:
       - ./stacks:/appsmith-stacks
     restart: unless-stopped
-    ports:
-      - "1991:1991"
-      - "1992:1992"
-    environment:
-      - APPSMITH_ENCRYPTION_PASSWORD=kocur
-      - APPSMITH_ENCRYPTION_SALT=kocur
-      - APPSMITH_ENCRYPTION_SECRET=kocur
-      - APPSMITH_ENCRYPTION_SECRET_KEY=kocur
-      - APPSMITH_ENCRYPTION_SECRET_KEY_SALT=kocur
-      - APPSMITH_CUSTOM_DOMAIN=build.kocur.app
+    # ports:
+    #   - "1991:1991"
+    #   - "1992:1992"
+    # environment:
+    #   - APPSMITH_ENCRYPTION_PASSWORD=kocur
+    #   - APPSMITH_ENCRYPTION_SALT=kocur
+    #   - APPSMITH_ENCRYPTION_SECRET=kocur
+    #   - APPSMITH_ENCRYPTION_SECRET_KEY=kocur
+    #   - APPSMITH_ENCRYPTION_SECRET_KEY_SALT=kocur
+    #   - APPSMITH_CUSTOM_DOMAIN=build.kocur.app
     labels:
       - traefik.enable=true
       - traefik.http.routers.appsmith.rule=Host(`build.kocur.app`)
       - traefik.http.routers.appsmith.tls=true
       - traefik.http.routers.appsmith.tls.certresolver=letsencrypt
-      - traefik.http.services.appsmith.loadbalancer.server.port=1991
+      - traefik.http.services.appsmith.loadbalancer.server.port=80
     networks:
       - proxy
 
